<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="age">Age</string>
    <string name="height_cm">Height (cm or ft/in)</string>
    <string name="weight_kg">Weight (kg or lbs)</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="category">Category: -</string>
    <string name="very_highly_underweight">Very Highly Underweight</string>
    <string name="highly_underweight">Highly Underweight</string>
    <string name="_15_9">≤ 15.9</string>
    <string name="underweight">Underweight</string>
    <string name="_16_0_16_9">16.0 – 16.9</string>
    <string name="_17_0_18_4">17.0 – 18.4</string>
    <string name="normal">Normal</string>
    <string name="_18_5_24_9">18.5 – 24.9</string>
    <string name="overweight">Overweight</string>
    <string name="_25_0_29_9">25.0 – 29.9</string>
    <string name="obese_stage_i">Obese Stage I</string>
    <string name="_30_0_34_9">30.0 – 34.9</string>
    <string name="obese_stage_ii">Obese Stage II</string>
    <string name="_35_0_39_9">35.0 – 39.9</string>
    <string name="obese_stage_iii">Obese Stage III</string>
    <string name="_40_0">≥ 40.0</string>
    <string name="bmi_0_0">BMI: 0.0</string>
    <string name="info">Info</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="cm">cm</string>
    <string name="ft_in">ft/in</string>
    <string name="kg">kg</string>
    <string name="lbs">lbs</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_gender">Select Gender -</string>
</resources>