<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/bmi_calculator"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/age"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/tvGenderLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_gender"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp" />

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:weightSum="2">

                <RadioGroup
                    android:id="@+id/rgHeightUnit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start">

                    <RadioButton
                        android:id="@+id/rbCm"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/cm"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/rbFeetInch"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/ft_in" />


                </RadioGroup>

                <RadioGroup
                    android:id="@+id/rgWeightUnit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end">

                    <RadioButton
                        android:id="@+id/rbKg"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/kg"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/rbLbs"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/lbs" />
                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/height_cm"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/weight_kg"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/btnCalculate"
                android:text="@string/calculate_bmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/tvResult"
                android:text="@string/bmi_0_0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvCategory"
                android:text="@string/category"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:layout_marginTop="16dp">

                <TableRow>
                    <TextView android:text="@string/very_highly_underweight"
                        android:textAlignment="center"/>
                    <TextView android:text="@string/_15_9"
                        android:textAlignment="center"/>
                </TableRow>

                <TableRow>
                    <TextView android:text="@string/highly_underweight"
                        android:textAlignment="center"/>
                    <TextView android:text="@string/_16_0_16_9"
                        android:textAlignment="center"/>
                </TableRow>

                <TableRow>
                    <TextView android:text="@string/underweight"
                        android:textAlignment="center"/>
                    <TextView android:text="@string/_17_0_18_4"
                        android:textAlignment="center"/>
                </TableRow>

                <TableRow>
                    <TextView android:text="@string/normal"
                        android:textAlignment="center"/>
                    <TextView android:text="@string/_18_5_24_9"
                        android:textAlignment="center"/>
                </TableRow>

                <TableRow>
                    <TextView android:text="@string/overweight"
                        android:textAlignment="center"/>
                    <TextView android:text="@string/_25_0_29_9"
                        android:textAlignment="center"/>
                </TableRow>

                <TableRow>
                    <TextView android:text="@string/obese_stage_i"
                        android:textAlignment="center"/>
                    <TextView android:text="@string/_30_0_34_9"
                        android:textAlignment="center"/>
                </TableRow>

                <TableRow>
                    <TextView android:text="@string/obese_stage_ii"
                        android:textAlignment="center"/>
                    <TextView android:text="@string/_35_0_39_9"
                        android:textAlignment="center"/>
                </TableRow>

                <TableRow>
                    <TextView android:text="@string/obese_stage_iii"
                        android:textAlignment="center"/>
                    <TextView android:text="@string/_40_0"
                        android:textAlignment="center"/>
                </TableRow>
            </TableLayout>


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        app:labelVisibilityMode="labeled"
        android:background="?android:attr/windowBackground" />


</LinearLayout>